# sassquatch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/sassquatch/: __init__.py  core.py
