[project]
name = "sassquatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robin van der Noord", email = "robinvandernoord@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sassquatch = "sassquatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
